--- a/TP2/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP2/src/app/components/pages/for-playing/for-playing.component.html
@@ -65,8 +65,7 @@
               game.id
             }}
           </p>
-          <app-button text="Copiar" classList="btn-primary-dark-2">
-          </app-button>
+          <app-icon class="url-icon-copy" name="copy" [width]="30"></app-icon>
         </div>
       </div>
     </app-popover>
