--- a/TP3/src/app/components/pages/playing/playing.component.html
+++ b/TP3/src/app/components/pages/playing/playing.component.html
@@ -22,11 +22,5 @@
 
 <section class="game">
   <h1>4 en linea</h1>
-  <canvas
-    (click)="canvasRepaint($event)"
-    width="680"
-    height="590"
-    #canvas
-    class="canvas"
-  ></canvas>
+  <app-game></app-game>
 </section>
