Improved chips deck quantity, position and drag and drop

--- a/TP3/src/app/components/molecules/game/game.component.html
+++ b/TP3/src/app/components/molecules/game/game.component.html
@@ -1,6 +1,8 @@
 <canvas
-  (click)="canvasRepaint($event)"
-  width="880"
+  (mousedown)="canvasMouseDown($event)"
+  (mouseup)="canvasMouseUp($event)"
+  (mousemove)="canvasMouseMove($event)"
+  width="1100"
   height="640"
   #canvas
   class="canvas"
