--- a/TP3/src/app/components/molecules/game/game.component.html
+++ b/TP3/src/app/components/molecules/game/game.component.html
@@ -1,3 +1,10 @@
+<section class="info">
+  <p>
+    Tiempo total: {{ minutes | number: '2.0' }}:{{ seconds | number: '2.0' }}
+  </p>
+  <p>Turno del jugador: {{ turnOfPlayer1 ? '1' : '2' }}</p>
+  <app-button (click)="reset()" text="Reiniciar"></app-button>
+</section>
 <canvas
   (mousedown)="canvasMouseDown($event)"
   (mouseup)="canvasMouseUp($event)"
