--- a/TP3/src/app/components/pages/playing/playing.component.css
+++ b/TP3/src/app/components/pages/playing/playing.component.css
@@ -1,7 +1,9 @@
-.playing {
-  height: 100vh;
+:host {
+  --blue-board: #2d4671;
+}
+
+.container {
   width: 100%;
-  position: relative;
   display: flex;
   align-items: center;
 }
@@ -14,32 +16,9 @@
   left: var(--space-medium);
 }
 
-.opacity {
-  position: absolute;
-  background-color: var(--black);
-  opacity: 0.7;
-  width: 30px;
-  height: 30px;
-  border-radius: 20px;
-}
-
-.opacity-back {
-  top: 0;
-  left: 0;
-}
-
-.opacity-question {
-  top: 0;
-  left: calc(30px + var(--space-medium));
-}
-
 .back,
 .question {
   z-index: 5;
-}
-
-.question {
-  top: 50px;
 }
 
 .overlay-content {
@@ -48,36 +27,105 @@
 }
 
 .game {
-  text-align: center;
-  margin-top: var(--space-x-large);
-}
-
-.container-canvas {
-  display: flex;
+  padding-top: var(--space-x-large);
+  display: inline-flex;
+  flex-direction: column;
   justify-content: center;
-  gap: var(--space-x-large);
-  margin-top: var(--space-x-large);
+  gap: var(--space-large);
+  margin: 0 auto;
 }
 
 .canvas {
+  background-color: var(--blue-board);
   border: 1px solid white;
-  background-color: #2d4671;
 }
 
 .info {
-  background-color: #2d4671;
+  background-color: var(--blue-board);
   border: 1px solid white;
-  padding: var(--space-large);
+  padding: var(--space-medium) var(--space-large);
+  text-align: center;
+  width: 100%;
+  position: relative;
 }
 
-.turn-info {
-  margin-bottom: var(--space-large);
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  gap: var(--space-large);
+  margin-top: var(--space-large);
 }
 
 .turn-info p {
   margin-bottom: var(--space-small);
 }
 
+.time-info {
+  display: flex;
+  justify-content: center;
+}
 .time-info p {
   margin-bottom: var(--space-small);
+  background-color: black;
+  padding: var(--space-medium);
+}
+
+.center {
+  display: flex;
+  gap: var(--space-large);
+  align-items: center;
+}
+
+.canvas-container {
+  position: relative;
+}
+
+.opacity-overlay {
+  background-color: var(--black);
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
+}
+
+.winner {
+  display: none;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--blue-board);
+  border: 1px solid white;
+  padding: var(--space-medium);
+}
+
+.show {
+  display: flex;
+}
+
+.img-winner {
+  border-radius: 50%;
+  animation: img-winner 1s linear infinite;
+}
+
+@keyframes img-winner {
+  0% {
+    /* outline: 1px solid var(--golden); */
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+    /* outline: 8px solid var(--golden); */
+  }
 }
