--- a/TP3/src/app/components/atoms/how-to-play/how-to-play.component.css
+++ b/TP3/src/app/components/atoms/how-to-play/how-to-play.component.css
@@ -1,8 +1,9 @@
 .instructions {
-	list-style: inside;
+  list-style: inside;
+  text-align: left;
 }
 
 .how-to-play {
-	margin-top: var(--space-large);
-	width: 100%;
+  margin-top: var(--space-large);
+  width: 100%;
 }
