--- a/TP3/src/app/components/atoms/how-to-play/how-to-play.component.html
+++ b/TP3/src/app/components/atoms/how-to-play/how-to-play.component.html
@@ -1,9 +1,10 @@
 <ul class="instructions">
-	<li><b>Un toque:</b> saltar</li>
-	<li><b>Dos toques:</b> salto largo</li>
-	<img
-		class="how-to-play"
-		src="assets/images/how-to-play.jpg"
-		alt="Como jugar imagen"
-	/>
+  <li><b>Click:</b> seleccionar ficha</li>
+  <li><b>Mover mouse con click apretado:</b> mover la ficha</li>
+  <li><b>Soltar mouse en una columna:</b> insertar ficha en columna</li>
+  <img
+    class="how-to-play"
+    src="assets/images/how-to-play.png"
+    alt="Como jugar imagen"
+  />
 </ul>
