--- a/TP3/src/app/components/atoms/overlay/overlay.component.html
+++ b/TP3/src/app/components/atoms/overlay/overlay.component.html
@@ -1,15 +1,11 @@
 <section *ngIf="visible" class="container-overlay">
-	<div
-		(click)="toggleVisible()"
-		class="opacity-overlay"
-		[class.opacity-overlay-help]="help"
-	></div>
-	<div
-		class="content"
-		[class.overlay-right]="right == true"
-		[class.overlay-help]="help"
-	>
-		<span (click)="toggleVisible()" class="close">&times;</span>
-		<ng-content></ng-content>
-	</div>
+  <div
+    class="content"
+    [class.overlay-right]="right == true"
+    [class.overlay-help]="help"
+  >
+    <span (click)="toggleVisible()" class="close">&times;</span>
+    <ng-content></ng-content>
+  </div>
+  <div class="modal" (click)="toggleVisible()"></div>
 </section>
