--- a/TP3/src/app/components/molecules/header-overlay-profile/header-overlay-profile.component.css
+++ b/TP3/src/app/components/molecules/header-overlay-profile/header-overlay-profile.component.css
@@ -1,50 +1,53 @@
 .profile-overlay {
-	padding-left: var(--space-large);
-	padding-bottom: var(--space-large);
+  padding-left: var(--space-large);
+  padding-bottom: var(--space-large);
 }
 
 .profile-overlay > .title {
-	margin: var(--space-x-large) 0;
-	text-align: center;
+  margin: var(--space-x-large) 0;
+  padding-left: 50px;
+  text-align: left;
 }
 
 .profile-overlay > .avatar {
-	text-align: center;
-	margin-bottom: var(--space-xx-large);
+  text-align: left;
+  padding-left: 15px;
+  margin-bottom: var(--space-xx-large);
 }
 
 .profile-overlay > .avatar > p {
-	margin-top: var(--space-small);
+  padding-left: 40px;
+  margin-top: var(--space-small);
 }
 
 .profile-overlay > .navigation {
-	text-align: left;
+  text-align: left;
 }
 
 .profile-overlay > .navigation > p {
-	margin-bottom: var(--space-medium);
+  margin-bottom: var(--space-medium);
 }
 
 .center {
-	display: inline-flex;
-	gap: var(--space-x-small);
-	align-items: center;
+  display: inline-flex;
+  gap: var(--space-x-small);
+  align-items: center;
 }
 
 .divider {
-	border-top: 1px solid var(--primary);
-	margin-bottom: var(--space-medium);
+  border-top: 1px solid var(--primary);
+  margin-bottom: var(--space-medium);
 }
 
 .profile-no-logged {
-	margin-top: var(--space-x-large);
+  margin-top: var(--space-x-large);
 }
 
 @media (min-width: 1024px) {
-	.profile-overlay p:hover {
-		color: var(--secondary);
-	}
-	.profile-overlay {
-		right: 0;
-	}
+  .profile-overlay p:hover {
+    color: var(--secondary);
+  }
+  .profile-overlay {
+    right: 0;
+  }
 }
