Added game check winner functionality

--- a/TP3/src/app/components/pages/playing/playing.component.html
+++ b/TP3/src/app/components/pages/playing/playing.component.html
@@ -31,7 +31,7 @@
           </p>
         </div>
         <div class="center">
-          <h1>4 en linea</h1>
+          <h1>{{ gameMode }}</h1>
           <div class="turn-info">
             <p>Turno del jugador: {{ game?.turnOfPlayer1 ? '1' : '2' }}</p>
             <img
