Added Connect 4 game on for-playing page and partial improvement on desktop page

--- a/TP3/src/app/components/atoms/how-to-play/how-to-play.component.css
+++ b/TP3/src/app/components/atoms/how-to-play/how-to-play.component.css
@@ -7,3 +7,10 @@
   margin-top: var(--space-large);
   width: 100%;
 }
+
+@media (min-width: 1024px) {
+  .how-to-play {
+    margin-top: var(--space-large);
+    width: 40%;
+  }
+}
