--- a/TP3/src/app/components/atoms/tab-content/tab-content.component.css
+++ b/TP3/src/app/components/atoms/tab-content/tab-content.component.css
@@ -1,8 +1,9 @@
 .tab-content {
-    background-color: var(--primary-dark-2);
-    color: var(--white);
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding: var(--space-small);
-    overflow: hidden;
+  background-color: var(--primary-dark-2);
+  color: var(--white);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: var(--space-small);
+  overflow: hidden;
+  text-align: justify;
 }
