Added connect 4 video and removed back-help icons from game info section

--- a/TP3/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP3/src/app/components/pages/for-playing/for-playing.component.html
@@ -102,6 +102,12 @@
         <p>Video</p>
         <div class="video">
           <img
+            *ngIf="game!.id == 21"
+            src="assets/images/connect4video.jpg"
+            alt="video"
+          />
+          <img
+            *ngIf="game!.id != 21"
             src="assets/images/infantiles/3pandasenjaponvideo.jpg"
             alt="video"
           />
