Improved for-playing page. Added images gallery for desktop

--- a/TP3/src/app/components/atoms/how-to-play/how-to-play.component.css
+++ b/TP3/src/app/components/atoms/how-to-play/how-to-play.component.css
@@ -11,6 +11,8 @@
 @media (min-width: 1024px) {
   .how-to-play {
     margin-top: var(--space-large);
-    width: 40%;
+    width: 400px;
+    height: 253px;
+    margin-left: 1%;
   }
 }
