--- a/TP3/src/app/components/atoms/how-to-play/how-to-play.component.html
+++ b/TP3/src/app/components/atoms/how-to-play/how-to-play.component.html
@@ -2,9 +2,15 @@
   <li><b>Click:</b> seleccionar ficha</li>
   <li><b>Mover mouse con click apretado:</b> mover la ficha</li>
   <li><b>Soltar mouse en una columna:</b> insertar ficha en columna</li>
+
   <img
     class="how-to-play"
-    src="assets/images/how-to-play.png"
-    alt="Como jugar imagen"
+    src="assets/images/puzzle/connect4howtoplay1.png"
+    alt="Como jugar imagen 1"
+  />
+  <img
+    class="how-to-play"
+    src="assets/images/puzzle/connect4howtoplay2.png"
+    alt="Como jugar imagen 2"
   />
 </ul>
