Improved connect 4 for-playing desktop page

--- a/TP3/src/app/components/atoms/tab-content/tab-content.component.css
+++ b/TP3/src/app/components/atoms/tab-content/tab-content.component.css
@@ -7,3 +7,9 @@
   overflow: hidden;
   text-align: justify;
 }
+
+@media (min-width: 1024px) {
+  .tab-content {
+    padding-left: var(--space-large);
+  }
+}
