--- a/TP3/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP3/src/app/components/pages/for-playing/for-playing.component.html
@@ -17,6 +17,15 @@
   </div>
 
   <div *ngIf="game!.id == 21" class="game-container">
+    <app-button
+      class="btn-play-game"
+      text="Jugar"
+      classList="background-success"
+      size="large"
+      (click)="hide()"
+      *ngIf="isVisible"
+    ></app-button>
+    <div class="opacity opacity-game" *ngIf="isVisible"></div>
     <app-playing> </app-playing>
   </div>
 
