Improved connect 4 for-playing desktop page missing commit

--- a/TP3/src/app/components/atoms/tab-content/tab-content.component.css
+++ b/TP3/src/app/components/atoms/tab-content/tab-content.component.css
@@ -10,6 +10,6 @@
 
 @media (min-width: 1024px) {
   .tab-content {
-    padding-left: var(--space-large);
+    padding-left: var(--space-medium);
   }
 }
